force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__Ended__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Ended__c</fullName>
    <label>Ended</label>
    <type>DateTime</type>
</CustomField>