force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__filterMatch__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__filterMatch__c</fullName>
    <label>filter match</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>