force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__filterOn__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__filterOn__c</fullName>
    <label>Filter On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>both</fullName>
                <default>true</default>
                <label>both</label>
            </value>
            <value>
                <fullName>selection</fullName>
            </value>
            <value>
                <fullName>match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>