force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__Started__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Started__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Started</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>