force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__type__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>search</fullName>
            </value>
            <value>
                <fullName>search-ext</fullName>
            </value>
            <value>
                <fullName>merge</fullName>
            </value>
            <value>
                <fullName>convert</fullName>
            </value>
            <value>
                <fullName>index</fullName>
            </value>
            <value>
                <fullName>unique</fullName>
            </value>
            <value>
                <fullName>web2lead</fullName>
            </value>
            <value>
                <fullName>setformerge</fullName>
            </value>
            <value>
                <fullName>delta</fullName>
            </value>
            <value>
                <fullName>deltasingle</fullName>
            </value>
            <value>
                <fullName>direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>